# openai-realtime-embedded-sdk

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults
.github/workflows/: build.yaml
components/peer/: CMakeLists.txt  idf_component.yml
src/: CMakeLists.txt  main.cpp  media.cpp  webrtc.cpp
