set(PEER_PROJECT_PATH "../../deps/libpeer")
file(GLOB CODES "${PEER_PROJECT_PATH}/src/*.c")

idf_component_register(
  SRCS ${CODES}
  INCLUDE_DIRS "${PEER_PROJECT_PATH}/src"
  REQUIRES mbedtls srtp json esp_netif
)

# Disable KeepAlives
file(READ ${CMAKE_CURRENT_SOURCE_DIR}/../../deps/libpeer/src/config.h INPUT_CONTENT)
string(REPLACE "#define KEEPALIVE_CONNCHECK 10000" "#define KEEPALIVE_CONNCHECK 0" MODIFIED_CONTENT ${INPUT_CONTENT})
file(WRITE ${CMAKE_CURRENT_SOURCE_DIR}/../../deps/libpeer/src/config.h ${MODIFIED_CONTENT})

if(NOT IDF_TARGET STREQUAL linux)
  add_definitions("-DESP32 -DCONFIG_USE_LWIP=1 -DCONFIG_AUDIO_BUFFER_SIZE=32000 -DCONFIG_DATA_BUFFER_SIZE=32000 -D__BYTE_ORDER=__LITTLE_ENDIAN")
endif()

add_definitions("-DHTTP_DO_NOT_USE_CUSTOM_CONFIG -DMQTT_DO_NOT_USE_CUSTOM_CONFIG -DCONFIG_USE_USRSCTP=1 -DDISABLE_PEER_SIGNALING=0")

# Add definitions for usrsctp
add_definitions(
  "-DHAVE_SCONN_LEN=1"
  "-DSCTP_USE_LWIP=1"
  "-DSCTP_USE_RTOS=1"
  "-DSCTP_SIMPLE_ALLOCATOR"
  "-D__Userspace__"
  "-DINET=1"
  "-DSCTP_DEBUG=1"
  "-DSCTP_USE_IPV6=0"
  "-DSCTP_USE_MBEDTLS_SHA1=1"
)
